[package]
name = "myfuckingreallymonitor"
version = "0.1.0"
edition = "2024"

[dependencies]
#区块链全家桶
alloy = {version = "1", features = ["full"]}
#用来读取.env文件
dotenvy = "0.15"
#解析url
url = "2.5"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
