[package]
name = "evm_monitor"
version = "0.1.0"
edition = "2024"
default-run = "evm_monitor"

[dependencies]
#区块链全家桶
alloy = {version = "1", features = ["full"]}
#用来读取.env文件
dotenvy = "0.15"
#解析url
url = "2.5"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
mysql = "25"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "chrono"] }
tracing = "0.1.44"
chrono = "0.4"
